# rucksack

./: CMakeLists.txt  README.markdown
CMakeModules/: FindRucksack.cmake
examples/: CMakeLists.txt  box.cpp  enumeration.cpp  main.cpp  master_and_slaves.cpp  testbed.cpp  testbed.hpp  testbed_impl.cpp  testbed_impl.hpp
include/rucksack/: alignment.hpp  alignment2.hpp  aspect.hpp  axis.hpp  axis_policy.hpp  axis_policy2.hpp  class_symbol.hpp  dim.hpp  is_expanding.hpp  minimum_size.hpp  optional_dim.hpp  optional_scalar.hpp  padding.hpp  preferred_size.hpp  rect.hpp  scalar.hpp  size_policy.hpp  size_policy2.hpp  size_policy_field.hpp  symbol.hpp  transient_layout_data.hpp  vector.hpp
include/rucksack/widget/: base.hpp  base_fwd.hpp  box.hpp  dummy.hpp  dummy_fwd.hpp  enumeration.hpp  enumeration_fwd.hpp  master_and_slaves.hpp  master_and_slaves_fwd.hpp  optional_parent.hpp  viewport_adaptor.hpp  viewport_adaptor_fwd.hpp
include/rucksack/widget/box/: base.hpp  base_fwd.hpp  child_information.hpp
src/rucksack/: alignment2.cpp  aspect.cpp  axis_policy.cpp  axis_policy2.cpp  size_policy2.cpp  transient_layout_data.cpp
src/rucksack/widget/: base.cpp  box.cpp  dummy.cpp  enumeration.cpp  master_and_slaves.cpp  viewport_adaptor.cpp
src/rucksack/widget/box/: base.cpp  child_information.cpp
util/: prettify_includes.sh  update_cmake.sh
