ADD_LIBRARY(
	rucksack_testbed STATIC testbed.cpp testbed_impl.cpp)

FUNCTION(
	ADD_RUCKSACK_EXAMPLE
	EXAMPLE_NAME
	ADDITIONAL_LIBRARIES)

	STRING(REPLACE "/" "" FULL_NAME ${EXAMPLE_NAME})

	SET(FULL_NAME rucksack${FULL_NAME}example)

	ADD_EXECUTABLE(${FULL_NAME} ${EXAMPLE_NAME}.cpp)

	TARGET_LINK_LIBRARIES (
		${FULL_NAME}
		rucksack
		rucksack_testbed
		${ADDITIONAL_LIBRARIES}
		${SGE_LIBRARIES}
		${Fcppt_core_LIBRARIES}
		${Fcppt_filesystem_LIBRARIES})

	INSTALL(
		TARGETS
		${FULL_NAME}
		DESTINATION
		${INSTALL_BINARY_DIR}
	)
ENDFUNCTION()

ADD_RUCKSACK_EXAMPLE(box "")
ADD_RUCKSACK_EXAMPLE(enumeration "")
ADD_RUCKSACK_EXAMPLE(master_and_slaves "")
